# dive-folly

./: CMakeLists.txt  compile_commands.json
.cache/clangd/index/: Align.h.5D9E5C2E3FF0EEAA.idx  ApplyTuple.h.E4BDD967FBC15447.idx  Asm.h.3C288100792C97AF.idx  Assume.h.A8A7C62D6E616393.idx  AsymmetricThreadFence.h.74721BBFAA395B66.idx  Bits.h.4D1D13492532EA57.idx  Builtins.h.F1B4441377788E39.idx  CArray.h.EEAE2DCD91D634E2.idx  CacheLocality.h.342C5E9B6B9B16E5.idx  ConcurrentHashMap-detail.h.26C92F47F56C7F38.idx  ConcurrentHashMap.h.AD0396134F215B6B.idx  Exception.h.71FD2E81448CBE6B.idx  F14Set.h.38B15085AE583A0D.idx  Hash.h.0FD77790A682B8D1.idx  Hazptr-fwd.h.30EC26B64605590E.idx  Hazptr.h.3F877596F4FFEF10.idx  HazptrDomain.h.7A091A25DB27C975.idx  HazptrHolder.h.4C47F4739D76FC3A.idx  HazptrObj.h.FC1345BB24E7E295.idx  HazptrObjLinked.h.AC104D8B74C0D1CB.idx  HazptrRec.h.ABB7765234ACA08D.idx  HazptrThrLocal.h.E7CA487048B6D122.idx  HazptrUtils.h.E4206186ABDEE9E1.idx  HeterogeneousAccess-fwd.h.4D271BE5E7B5F326.idx  HeterogeneousAccess.h.24CD2E46C4D7BAA6.idx  Hint-inl.h.630DBE9D3B4D2DE0.idx  Hint.h.3E908159BC9E1C03.idx  Invoke.h.1037C15576ACBB80.idx  Launder.h.76DD7865D29A88ED.idx  SafeAssert.h.71837A42139E31FA.idx  Sleeper.h.D7418E400CB4AF6D.idx  SpookyHashV1.h.959440DB04AF3474.idx  SpookyHashV2.h.5AE20DE1482229F3.idx  TypeInfo.h.70B1D20F320585E5.idx  main.cpp.435373CFCB38B6A2.idx
cmake/: fmt.cmake  gflags.cmake  glog.cmake  unwind.cmake
cmake/modules/glog/: FindUnwind.cmake  Findgflags.cmake
cmake/patches/: glog_demangle.patch
folly/: Conv.cpp  CppAttributes.h  Optional.h  Preprocessor.h  SingletonThreadLocal.cpp
folly/concurrency/detail/: ConcurrentHashMap-detail.h
folly/container/: SparseByteSet.h
folly/detail/: RangeCommon.cpp  RangeSse42.cpp  Sse.cpp  Sse.h  UniqueInstance.cpp
folly/hash/: SpookyHashV1.cpp  SpookyHashV2.cpp
folly/lang/: Exception.h  Launder.h  SafeAssert.h  TypeInfo.h  UncaughtExceptions.cpp
folly/portability/: Builtins.cpp  Config.h  Malloc.cpp  PThread.cpp
folly/synchronization/detail/: Sleeper.cpp
src/: main.cpp
